--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <!--<link rel="stylesheet" href="./css/stile.css" /> -->
   <link rel="stylesheet" href="./css/main.min.css">
 </head>
-<!-----
+
 <body>
-  <header class="header">
+  <!--header class="header">
     <div class="container header-flex">
       <nav class="nav">
         <a class="nav__logo link" href="/" lang="en">Web<span class="nav__logo-accent">Studio</span></a>
@@ -46,8 +46,8 @@
   </header-->
 
 
-<main>
-  <!-----<section class="service">
+  <main>
+    <section class="service">
       <div class="container">
         <div class="container-service">
           <h1 class="service-text">Эффективные решения для вашего бизнеса</h1>
@@ -57,85 +57,85 @@
           </div>
         </div>
       </div>
-    </section>-->
+    </section>
 
 
-  <section class="benefits section">
-    <div class="container">
-      <!-- (Заглввие вне дизайна) -->
-      <h2 class="benefits__text visually-hidden">Преймущества</h2>
-      <ul class="benefits__list list">
-        <li class="benefits__item">
-          <div class="benefits__logo">
-            <svg class="benefits__logo-icon" height="70" width="70">
-              <use href="./img/icons.svg#icon-antenna"></use>
-            </svg>
-          </div>
-          <h3 class="benefits__titel">Внимание к деталям</h3>
-          <p class="benefits__after-titel">Идейные соображения, а также начало повседневной работы по формированию
-            позиции.</p>
-        </li>
-        <li class="benefits__item">
-          <div class="benefits__logo">
-            <svg class="benefits__logo-icon" height="70" width="70">
-              <use href="./img/icons.svg#icon-clock"></use>
-            </svg>
-          </div>
-          <h3 class="benefits__titel">Пунктуальность</h3>
-          <p class="benefits__after-titel">
-            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-          </p>
-        </li>
-        <li class="benefits__item">
-          <div class="benefits__logo">
-            <svg class="benefits__logo-icon" height="70" width="70">
-              <use href="./img/icons.svg#icon-diagram"></use>
-            </svg>
-          </div>
-          <h3 class="benefits__titel">Планирование</h3>
-          <p class="benefits__after-titel">
-            Равным образом консультация с широким активом в значительной степени обуславливает.
-          </p>
-        </li>
-        <li class="benefits__item">
-          <div class="benefits__logo">
-            <svg class="benefits__logo-icon" height="70" width="70">
-              <use href="./img/icons.svg#icon-astronaut"></use>
-            </svg>
-          </div>
-          <h3 class="benefits__titel">Современные технологии</h3>
-          <p class="benefits__after-titel">Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
-    </div>
-  </section>
+    <section class="benefits section">
+      <div class="container">
+        <!-- (Заглввие вне дизайна) -->
+        <h2 class="benefits__text visually-hidden">Преймущества</h2>
+        <ul class="benefits__list list">
+          <li class="benefits__item">
+            <div class="benefits__logo">
+              <svg class="benefits__logo-icon" height="70" width="70">
+                <use href="./img/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
+            <h3 class="benefits__titel">Внимание к деталям</h3>
+            <p class="benefits__after-titel">Идейные соображения, а также начало повседневной работы по формированию
+              позиции.</p>
+          </li>
+          <li class="benefits__item">
+            <div class="benefits__logo">
+              <svg class="benefits__logo-icon" height="70" width="70">
+                <use href="./img/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
+            <h3 class="benefits__titel">Пунктуальность</h3>
+            <p class="benefits__after-titel">
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li class="benefits__item">
+            <div class="benefits__logo">
+              <svg class="benefits__logo-icon" height="70" width="70">
+                <use href="./img/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
+            <h3 class="benefits__titel">Планирование</h3>
+            <p class="benefits__after-titel">
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li class="benefits__item">
+            <div class="benefits__logo">
+              <svg class="benefits__logo-icon" height="70" width="70">
+                <use href="./img/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
+            <h3 class="benefits__titel">Современные технологии</h3>
+            <p class="benefits__after-titel">Значимость этих проблем настолько очевидна, что реализация плановых
+              заданий.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-  <section class="about section">
-    <div class="container">
-      <h2 class="about__text title">Чем мы занимаемся</h2>
-      <ul class="about__list list">
-        <li class="about__item"><img src="./img/box-2.jpg" alt="проэкт на ноутбуке" width="370" height="294" />
-          <div class="about__wrap">
-            <p class="about__item-comment">Десктопные приложения</p>
-          </div>
-        </li>
-        <li class="about__item"><img src="./img/box-3.jpg" alt="проэкт на планшете" width="370" height="294" />
-          <div class="about__wrap">
-            <p class="about__item-comment">Мобильные приложения</p>
-          </div>
-        </li>
-        <li class="about__item"><img src="./img/box-1.jpg" alt="проэкт на бумаге" width="370" height="294" />
-          <div class="about__wrap">
-            <p class="about__item-comment">Дизайнерские решения</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    </section-->
+    <section class="about section">
+      <div class="container">
+        <h2 class="about__text title">Чем мы занимаемся</h2>
+        <ul class="about__list list">
+          <li class="about__item"><img src="./img/box-2.jpg" alt="проэкт на ноутбуке" width="370" height="294" />
+            <div class="about__wrap">
+              <p class="about__item-comment">Десктопные приложения</p>
+            </div>
+          </li>
+          <li class="about__item"><img src="./img/box-3.jpg" alt="проэкт на планшете" width="370" height="294" />
+            <div class="about__wrap">
+              <p class="about__item-comment">Мобильные приложения</p>
+            </div>
+          </li>
+          <li class="about__item"><img src="./img/box-1.jpg" alt="проэкт на бумаге" width="370" height="294" />
+            <div class="about__wrap">
+              <p class="about__item-comment">Дизайнерские решения</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-    <!-----<section class="command section">
+    <section class="command section">
       <div class="container">
         <h2 class="command__text title">Наша команда</h2>
         <ul class="command__list list">
@@ -274,9 +274,9 @@
           </li>
         </ul>
       </div>
-    </section-->
+    </section>
 
-    <!-----<section class="client section">
+    <section class="client section">
       <div class="container">
         <h2 class="client__text title">Постоянные клиенты</h2>
         <ul class="client__list list">
@@ -319,9 +319,9 @@
 
         </ul>
       </div>
-    </section-->
-</main>
-<!----- <footer class="footer">
+    </section>
+  </main>
+  <footer class="footer">
     <div class="container footer-container">
       <div class="wrap">
         <a class="wrap__logo link" href=" /" lang="en">Web<span class="wrap__logo-accent">Studio</span></a>
@@ -380,10 +380,10 @@
         </form>
       </div>
     </div>
-  </footer-->
-<div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <!-----   <button type="button" class="modal-close-btn" data-modal-close><svg class="modal-close-icon" height="18"
+  </footer>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <!-----   <button type="button" class="modal-close-btn" data-modal-close><svg class="modal-close-icon" height="18"
           width="18">
           <use href="./img/icons.svg#icon-close-black"></use>
         </svg></button>
@@ -428,10 +428,10 @@
         <button type="submit" class="modal-button">Отправить</button>
 
       </form-->
-  </div>
+    </div>
 
-</div>
-<script src="./js/modal.js"></script>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 
