--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-1.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist1.jpg 1x, ./img/desktop-mini/imglist12.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox1.jpg 1x, ./img/tablet-mini/imgtabletbox12x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox1.jpg 1x, ./img/mobile-mini/imgbox12x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox1.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -84,7 +92,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-2.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist2.jpg 1x, ./img/desktop-mini/imglist22.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox2.jpg 1x, ./img/tablet-mini/imgtabletbox22x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox2.jpg 1x, ./img/mobile-mini/imgbox22x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox2.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -98,7 +114,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-3.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist3.jpg 1x, ./img/desktop-mini/imglist32.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox3.jpg 1x, ./img/tablet-mini/imgtabletbox32x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox3.jpg 1x, ./img/mobile-mini/imgbox32x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox3.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -112,7 +136,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-4.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist4.jpg 1x, ./img/desktop-mini/imglist42.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox4.jpg 1x, ./img/tablet-mini/imgtabletbox42x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox4.jpg 1x, ./img/mobile-mini/imgbox42x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox4.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -126,7 +158,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-5.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist5.jpg 1x, ./img/desktop-mini/imglist52.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox5.jpg 1x, ./img/tablet-mini/imgtabletbox52x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox5.jpg 1x, ./img/mobile-mini/imgbox52x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox5.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -140,7 +180,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-6.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist6.jpg 1x, ./img/desktop-mini/imglist62.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox6.jpg 1x, ./img/tablet-mini/imgtabletbox62x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox6.jpg 1x, ./img/mobile-mini/imgbox62x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox6.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -154,7 +202,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-7.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist7.jpg 1x, ./img/desktop-mini/imglist72.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox7.jpg 1x, ./img/tablet-mini/imgtabletbox72x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox7.jpg 1x, ./img/mobile-mini/imgbox72x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox7.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -168,7 +224,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-8.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist8.jpg 1x, ./img/desktop-mini/imglist82.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox8.jpg 1x, ./img/tablet-mini/imgtabletbox82x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox8.jpg 1x, ./img/mobile-mini/imgbox82x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox8.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -182,7 +246,15 @@
           <li class="photo__item">
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
-                <img src="./img/portfolio-img/img-port-9.jpg" alt="изображение работи" width="370" height="294" />
+                <picture>
+                  <source srcset="../img/desktop-mini/imglist9.jpg 1x, ./img/desktop-mini/imglist92.jpg 2x"
+                    media="(min-width: 1200px)" />
+                  <source srcset="./img/tablet-mini/imgtabletbox9.jpg 1x, ./img/tablet-mini/imgtabletbox92x.jpg 2x"
+                    media="(min-width: 768px)" />
+                  <source srcset="./img/mobile-mini/imgbox9.jpg 1x, ./img/mobile-mini/imgbox92x.jpg 2x"
+                    media="(min-width: 320px)" />
+                  <img src="./img/mobile-mini/imgbox9.jpg" alt="изображение работи" width="450" height="294" />
+                </picture>
                 <p class="photo__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                   сервисов.
                   Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
