--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <!--header class="header">
+  <header class="header">
     <div class="container header-flex">
       <nav class="nav">
         <a class="nav__logo link" href="/" lang="en">Web<span class="nav__logo-accent">Studio</span></a>
@@ -42,8 +42,45 @@
             </svg>+38 096 111 11 11</a>
         </li>
       </ul>
+      <button type="button" class="menu-open-btn" data-menu-open><svg class="menu-open__icon" height="40" width="40">
+          <use href="./img/icons.svg#icon-menu"></use>
+        </svg></button>
     </div>
-  </header-->
+    <div class="mob-menu mob-menu" data-menu>
+      <div class="container">
+        <div class="mob-menu__top">
+          <button type="button" class="close-open-btn" data-menu-close><svg class="menu-open__icon" height="40"
+              width="40">
+              <use href="./img/icons.svg#icon-close"></use>
+            </svg></button>
+          <nav>
+            <ul class="mob-menu__list list">
+              <li class="mob-menu__item"><a href="./index.html" class="mob-menu__link link">Студия</a></li>
+              <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link">Портфолио</a></li>
+              <li class="mob-menu__item"><a href="/" class="mob-menu__link link">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mob-menu-bottom">
+          <ul class="mob-menu-adress list">
+            <li class="mob-menu-adress__item"><a href="tel:+380961111111" class="mob-menu__tel link">+38 096 111 11
+                11</a></li>
+            <li class="mob-menu-adress__item"><a href="mailto:info@devstudio.com"
+                class="mob-menu__mail link">info@devstudio.com</a></li>
+          </ul>
+          <ul class="mob-soc list">
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Instagram</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Twitter</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Facebook</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--  -->
+
+    </div>
+  </header>
 
 
   <main>
@@ -116,17 +153,20 @@
       <div class="container">
         <h2 class="about__text title">Чем мы занимаемся</h2>
         <ul class="about__list list">
-          <li class="about__item"><img src="./img/box-2.jpg" alt="проэкт на ноутбуке" width="370" height="294" />
+          <li class="about__item"><img srcset="./img/desktop-mini/imgbox1.jpg 1x, ./img/desktop-mini/imgbox12.jpg 2x"
+              src="./img/desktop-mini/imgbox1.jpg" alt="проэкт на ноутбуке" width="370" height="294" />
             <div class="about__wrap">
               <p class="about__item-comment">Десктопные приложения</p>
             </div>
           </li>
-          <li class="about__item"><img src="./img/box-3.jpg" alt="проэкт на планшете" width="370" height="294" />
+          <li class="about__item"><img srcset="./img/desktop-mini/imgbox2.jpg 1x, ./img/desktop-mini/imgbox22.jpg 2x"
+              src="./img/desktop-mini/imgbox2.jpg" alt="проэкт на планшете" width="370" height="294" />
             <div class="about__wrap">
               <p class="about__item-comment">Мобильные приложения</p>
             </div>
           </li>
-          <li class="about__item"><img src="./img/box-1.jpg" alt="проэкт на бумаге" width="370" height="294" />
+          <li class="about__item"><img srcset="./img/desktop-mini/imgbox3.jpg 1x, ./img/desktop-mini/imgbox32.jpg 2x"
+              src="./img/desktop-mini/imgbox3.jpg" alt="проэкт на бумаге" width="370" height="294" />
             <div class="about__wrap">
               <p class="about__item-comment">Дизайнерские решения</p>
             </div>
@@ -140,7 +180,16 @@
         <h2 class="command__text title">Наша команда</h2>
         <ul class="command__list list">
           <li class="command__item">
-            <img src="./img/img-4.jpg" alt="сотрудник кмпании" width="270" height="260" />
+            <picture>
+              <source srcset="./img/desktop-mini/img1.jpg 1x, ./img/desktop-mini/img12.jpg 2x"
+                media="(min-width: 1200px)" />
+              <source srcset="./img/tablet-mini/imgtablet1.jpg 1x, ./img/tablet-mini/imgtablet12x.jpg 2x"
+                media="(min-width: 768px)" />
+
+              <source srcset="./img/mobile-mini/img-1.jpg 1x, ./img/mobile-mini/img-12x.jpg 2x"
+                media="(min-width: 320px)" />
+              <img src="./img/mobile-mini/img-1.jpg" alt="сотрудник кмпании" width="450" height="460" />
+            </picture>
             <div class="command__container">
               <h3 class="command__name">Игорь Демьяненко</h3>
               <p lang="en" class="command__trade">Product Designerr</p>
@@ -174,7 +223,16 @@
 
           </li>
           <li class="command__item">
-            <img src="./img/img-1.jpg" alt="сотрудник кмпании" width="270" height="260" />
+            <picture>
+              <source srcset="./img/desktop-mini/img2.jpg 1x, ./img/desktop-mini/img22.jpg 2x"
+                media="(min-width: 1200px)" />
+              <source srcset="./img/tablet-mini/imgtablet2.jpg 1x, ./img/tablet-mini/imgtablet22x.jpg 2x"
+                media="(min-width: 768px)" />
+
+              <source srcset="./img/mobile-mini/img-2.jpg 1x, ./img/mobile-mini/img-22x.jpg 2x"
+                media="(min-width: 320px)" />
+              <img src="./img/mobile-mini/img-2.jpg" alt="сотрудник кмпании" width="450" height="460" />
+            </picture>
             <div class="command__container">
               <h3 class="command__name">Ольга Репина</h3>
               <p lang="en" class="command__trade">Frontend Developer</p>
@@ -207,7 +265,15 @@
             </div>
           </li>
           <li class="command__item">
-            <img src="./img/img-2.jpg" alt="сотрудник кмпании" width="270" height="260" />
+            <picture>
+              <source srcset="./img/desktop-mini/img3.jpg 1x, ./img/desktop-mini/img32.jpg 2x"
+                media="(min-width: 1200px)" />
+              <source srcset="./img/tablet-mini/imgtablet3.jpg 1x, ./img/tablet-mini/imgtablet32x.jpg 2x"
+                media="(min-width: 768px)" />
+              <source srcset="./img/mobile-mini/img-3.jpg 1x, ./img/mobile-mini/img-32x.jpg 2x"
+                media="(min-width: 320px)" />
+              <img src="./img/mobile-mini/img-3.jpg" alt="сотрудник кмпании" width="450" height="460" />
+            </picture>
             <div class="command__container">
               <h3 class="command__name">Николай Тарасов</h3>
               <p lang="en" class="command__trade">Marketing</p>
@@ -240,7 +306,16 @@
             </div>
           </li>
           <li class="command__item">
-            <img src="./img/img-3.jpg" alt="сотрудник кмпании" width="270" height="260" />
+            <picture>
+              <source srcset="./img/desktop-mini/img4.jpg 1x, ./img/desktop-mini/img42.jpg 2x"
+                media="(min-width: 1200px)" />
+              <source srcset="./img/tablet-mini/imgtablet4.jpg 1x, ./img/tablet-mini/imgtablet42x.jpg 2x"
+                media="(min-width: 768px)" />
+
+              <source srcset="./img/mobile-mini/img-4.jpg 1x, ./img/mobile-mini/img-42x.jpg 2x"
+                media="(min-width: 320px)" />
+              <img src="./img/mobile-mini/img-4.jpg" alt="сотрудник кмпании" width="450" height="460" />
+            </picture>
             <div class="command__container">
               <h3 class="command__name">Михаил Ермаков</h3>
               <p lang="en" class="command__trade">UI Designer</p>
@@ -383,7 +458,7 @@
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <!-----   <button type="button" class="modal-close-btn" data-modal-close><svg class="modal-close-icon" height="18"
+      <button type="button" class="modal-close-btn" data-modal-close><svg class="modal-close-icon" height="18"
           width="18">
           <use href="./img/icons.svg#icon-close-black"></use>
         </svg></button>
@@ -427,7 +502,7 @@
         </div>
         <button type="submit" class="modal-button">Отправить</button>
 
-      </form-->
+        </form-->
     </div>
 
   </div>
