--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,43 @@
             </svg>+38 096 111 11 11</a>
         </li>
       </ul>
+      <button type="button" class="menu-open-btn" data-menu-open><svg class="menu-open__icon" height="40" width="40">
+          <use href="./img/icons.svg#icon-menu"></use>
+        </svg></button>
     </div>
+    <div class="mob-menu is-open" data-menu>
+      <div class="menu-container">
+        <div class="mob-menu__top">
+          <button type="button" class="close-open-btn" data-menu-close><svg class="menu-open__icon" height="40"
+              width="40">
+              <use href="./img/icons.svg#icon-close"></use>
+            </svg></button>
+          <nav>
+            <ul class="mob-menu__list list">
+              <li class="mob-menu__item"><a href="./index.html" class="mob-menu__link link">Студия</a></li>
+              <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link">Портфолио</a></li>
+              <li class="mob-menu__item"><a href="/" class="mob-menu__link link">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mob-menu-bottom">
+          <ul class="mob-menu-adress list">
+            <li class="mob-menu-adress__item"><a href="tel:+380961111111" class="mob-menu__tel link">+38 096 111 11
+                11</a></li>
+            <li class="mob-menu-adress__item"><a href="mailto:info@devstudio.com"
+                class="mob-menu__mail link">info@devstudio.com</a></li>
+          </ul>
+          <ul class="mob-soc list">
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Instagram</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Twitter</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">Facebook</a></li>
+            <li class="mob-soc__item"><a href="" class="mob-soc__link">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </div>
+
   </header>
 
   <main>
@@ -330,7 +366,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/mobile-minu.js"></script>
 </body>
 
 </html>
