--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <use href="./img/icons.svg#icon-menu"></use>
         </svg></button>
     </div>
-    <div class="mob-menu mob-menu" data-menu>
-      <div class="container">
+    <div class="mob-menu is-open" data-menu>
+      <div class="menu-container">
         <div class="mob-menu__top">
           <button type="button" class="close-open-btn" data-menu-close><svg class="menu-open__icon" height="40"
               width="40">
@@ -507,6 +507,7 @@
 
   </div>
   <script src="./js/modal.js"></script>
+  <script src="./js/mobile-minu.js"></script>
 </body>
 
 
