--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <use href="./img/icons.svg#icon-menu"></use>
         </svg></button>
     </div>
-    <div class="mob-menu is-open" data-menu>
+    <div class="mob-menu" data-menu>
       <div class="menu-container">
         <div class="mob-menu__top">
           <button type="button" class="close-open-btn" data-menu-close><svg class="menu-open__icon" height="40"
