--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist1.jpg 1x, ./img/desktop-mini/imglist12.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist1.jpg 1x, ./img/desktop-mini/imglist12.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox1.jpg 1x, ./img/tablet-mini/imgtabletbox12x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -129,7 +129,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist2.jpg 1x, ./img/desktop-mini/imglist22.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist2.jpg 1x, ./img/desktop-mini/imglist22.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox2.jpg 1x, ./img/tablet-mini/imgtabletbox22x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -151,7 +151,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist3.jpg 1x, ./img/desktop-mini/imglist32.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist3.jpg 1x, ./img/desktop-mini/imglist32.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox3.jpg 1x, ./img/tablet-mini/imgtabletbox32x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -173,7 +173,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist4.jpg 1x, ./img/desktop-mini/imglist42.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist4.jpg 1x, ./img/desktop-mini/imglist42.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox4.jpg 1x, ./img/tablet-mini/imgtabletbox42x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -195,7 +195,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist5.jpg 1x, ./img/desktop-mini/imglist52.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist5.jpg 1x, ./img/desktop-mini/imglist52.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox5.jpg 1x, ./img/tablet-mini/imgtabletbox52x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -217,7 +217,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist6.jpg 1x, ./img/desktop-mini/imglist62.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist6.jpg 1x, ./img/desktop-mini/imglist62.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox6.jpg 1x, ./img/tablet-mini/imgtabletbox62x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -239,7 +239,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist7.jpg 1x, ./img/desktop-mini/imglist72.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist7.jpg 1x, ./img/desktop-mini/imglist72.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox7.jpg 1x, ./img/tablet-mini/imgtabletbox72x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -261,7 +261,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist8.jpg 1x, ./img/desktop-mini/imglist82.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist8.jpg 1x, ./img/desktop-mini/imglist82.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox8.jpg 1x, ./img/tablet-mini/imgtabletbox82x.jpg 2x"
                     media="(min-width: 768px)" />
@@ -283,7 +283,7 @@
             <a href="" class="photo__efect link">
               <div class="photo__wrap">
                 <picture>
-                  <source srcset="../img/desktop-mini/imglist9.jpg 1x, ./img/desktop-mini/imglist92.jpg 2x"
+                  <source srcset="./img/desktop-mini/imglist9.jpg 1x, ./img/desktop-mini/imglist92.jpg 2x"
                     media="(min-width: 1200px)" />
                   <source srcset="./img/tablet-mini/imgtabletbox9.jpg 1x, ./img/tablet-mini/imgtabletbox92x.jpg 2x"
                     media="(min-width: 768px)" />
